--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import '../styles/global.css';
           }
       })()
         </script>
-        <Seo seo={{ title: "EcoBuilder", description: "Page description", keywords: "", canonical: "", image: '', type: "website", themeColor: "#ffffff"}} />
+        <Seo seo={{ title: "EcoBuilder", description: "Page description", keywords: "", canonical: "https://666-1730713455539.netlify.app/", image: 'https://666-1730713455539.netlify.app', type: "website", themeColor: "#ffffff"}} />
 		<meta charset="utf-8" />
 		<link
 			rel="icon"
